--- a/agargara.css
+++ b/agargara.css
@@ -124,12 +124,12 @@ div.sliding-content{
 }
 
 div.inner{
-	padding: 120px 0;
+	padding: 0;
 	margin: 0;
 }
 
 #home{
-	padding: 10% 0;
+	padding: 8em 0 0 0;
 	margin: 0;
 }
 
